--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -46,4 +46,50 @@
     "product11 product12 product13"
     "product111 product112 .";
 
-} */
+} */ 
+
+
+.App {
+  /* text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  max-width: 1200px;
+  margin: 0 auto; */
+
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 20px;
+  padding: 20px;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.product-item {
+  border: 1px solid #000;
+  padding: 20px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  /* border: 1px solid #000;
+  padding: 10px;
+  box-sizing: border-box;
+  overflow: hidden;
+  position: relative;
+  transition: all 0.5s ease-in-out; */
+}
+
+.product-item img {
+  max-width: 60%;
+  height: auto;
+  transition: transform 0.3s ease; /* add this line */
+  object-fit: contain;
+}
+
+.product-item img:hover {
+  transform: scale(1.1); /* add this line */
+}
